--- a/src/assets/scss/base.scss
+++ b/src/assets/scss/base.scss
@@ -590,6 +590,7 @@ html,body,#container, #container>div{
       font-size: .28rem;
       -webkit-box-pack:end;
       color: #555;
+      border: 0px;
       .number{
         font-size: .24rem;
         color: #8E8E8E;
