--- a/src/assets/scss/font/index.scss
+++ b/src/assets/scss/font/index.scss
@@ -1,13 +1,14 @@
 @font-face {
-  font-family: 'iconfont';
-  src: url('iconfont.eot');
-  src: url('iconfont.eot?#iefix') format('embedded-opentype'),
-  url('iconfont.woff') format('woff'),
-  url('iconfont.ttf') format('truetype'),
-  url('iconfont.svg#iconfont') format('svg');
+  font-family: 'iconfont';  /* project id 319636 */
+  src: url('//at.alicdn.com/t/font_myprm1o919qnnrk9.eot');
+  src: url('//at.alicdn.com/t/font_myprm1o919qnnrk9.eot?#iefix') format('embedded-opentype'),
+  url('//at.alicdn.com/t/font_myprm1o919qnnrk9.woff') format('woff'),
+  url('//at.alicdn.com/t/font_myprm1o919qnnrk9.ttf') format('truetype'),
+  url('//at.alicdn.com/t/font_myprm1o919qnnrk9.svg#iconfont') format('svg');
 }
 
 .iconfont{
 	font-family: iconfont;
 	font-size: .5rem;
+	vertical-align: middle;
 }
